// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser exponential expressions parses exponential operators 1`] = `
Binary {
  "left": Literal {
    "value": 2,
  },
  "right": Literal {
    "value": 3,
  },
  "token": Object {
    "kind": 6,
    "line": 1,
    "literal": undefined,
  },
}
`;

exports[`parser exponential expressions parses repeated exponential operators as left-associative 1`] = `
Binary {
  "left": Binary {
    "left": Literal {
      "value": 2,
    },
    "right": Literal {
      "value": 3,
    },
    "token": Object {
      "kind": 6,
      "line": 1,
      "literal": undefined,
    },
  },
  "right": Literal {
    "value": 4,
  },
  "token": Object {
    "kind": 6,
    "line": 1,
    "literal": undefined,
  },
}
`;
